spacing issues fixed

--- a/src/app/Portfolio/_mobilePortfolio.scss
+++ b/src/app/Portfolio/_mobilePortfolio.scss
@@ -8,10 +8,12 @@
   display: flex;
   flex-direction: column;
   .mobile-header-container {
+    margin-bottom: 2.3rem;
     h4 {
       color: #000;
       font-size: 20px;
       font-weight: 500;
+      margin-bottom: 0.2rem;
     }
     p {
       color: #adadad;
@@ -472,7 +474,7 @@
         background-color: #e5e5e6;
         padding: 1.6rem 2rem;
         border-radius: 12px;
-        margin-bottom: 1.8rem;
+        margin-bottom: 2.3rem;
         max-height: 28rem;
         overflow: scroll;
         .accountsAmount {
